# terraform-exporter-plugin

./: README.md  go.work  plugin.proto
examples/golang/: go.mod  go.sum
examples/golang/go-plugin-rpc/: main.go
examples/golang/shared/: files.go  hcl.go
examples/python/: plugin.py  requirements.txt
go/: go.mod
go-plugin/: definitions.go  generate.go  go.mod  go.sum  grpc.go  host.go  rpc.go  serve.go
go-plugin/plugin/: definitions.go  grpc.go
go-plugin/proto/: plugin.pb.go  plugin_grpc.pb.go
go/plugin/: annotated.go  grpc.go  host.go  rpc.go  serve.go
go/proto/: generate.go  plugin.pb.go  plugin_grpc.pb.go
libraries/: plugin.proto
libraries/go-plugin/: definitions.go  go.mod  grpc.go  rpc.go  serve.go
libraries/go-plugin/proto/: plugin.pb.go
libraries/python/: Makefile  README.md  __init__.py  generate.sh  pyproject.toml  requirements.txt
libraries/python/lib/: net.py  serve.py  types.py
libraries/python/src/: __init__.py
libraries/python/src/lib/: net.py  types.py
libraries/python/terraform_exporter_plugin/: __init__.py
libraries/python/terraform_exporter_plugin/lib/: serve.py  types.py
libraries/spring-boot/: LICENSE  settings.gradle
libraries/typescript/: .eslintrc  package.json
libraries/typescript/scripts/: generate.sh
libraries/typescript/src/: index.ts
spring-boot/: .gitignore  build.gradle
spring-boot/extra/spotless/: mit-license.java
typescript/: .gitignore  .prettierrc  .yarnrc.yml  README.md  package.json  tsconfig.json
typescript/scripts/: build.sh
typescript/src/lib/: annotations.ts  network.ts  service.ts  (+1 more)
(+24 files in other folders)
