[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "terraform-exporter-plugin"
version = "0.2.0"
description = "Python module for creating terraform-exporter plugins"
readme = "README.md"
authors = [
  "Josh Ghiloni <ghiloni@gmail.com>"
]
maintainers = [
  "Josh Ghiloni <ghiloni@gmail.com>"
]
packages = [{include = "terraform_exporter_plugin"}]

[tool.poetry.dependencies]
python = ">=3.10"
grpcio-tools = "^1.51"
grpcio-health-checking = "^1.51"

[tool.poetry_bumpversion.file."terraform_exporter_plugin/__init__.py"]